--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,6 @@ Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 guess-language-spirit==0.5.3
 idna==2.6
-inflection==0.3.1
 injector==0.12.0
 isort==4.3.4
 itsdangerous==0.24
@@ -30,7 +29,6 @@ python-dateutil==2.7.2
 python-dotenv==0.8.2
 python-editor==1.0.3
 pytz==2018.4
-PyYAML==3.12
 requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.2.5
@@ -40,3 +38,5 @@ visitor==0.1.3
 Werkzeug==0.14.1
 wrapt==1.10.11
 WTForms==2.1
+psycopg2
+gunicorn
